# domain_specific_language_extractor

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml  pre-commit.yaml
docs/: arc42.md  dsl_representation.md
docs/adr/: 0001-modular-cli-pipeline.md
docs/diagrams/: arc42-section5-building-blocks.puml  arc42-section6-runtime.puml  arc42-section7-deployment.puml
include/dsl/: DefaultComponents.h  Interfaces.h  analyzer_pipeline_builder.h  ast_cache.h  caching_ast_indexer.h  cli_exit_codes.h  cmake_source_acquirer.h  compile_commands_ast_indexer.h  component_registry.h  default_analyzer_pipeline.h  default_components.h  dsl_analyzer.h  escaping.h  heuristic_dsl_extractor.h  interfaces.h  logging.h  markdown_reporter.h  models.h  rule_based_coherence_analyzer.h
scripts/: install_dev_dependencies.ps1  install_dev_dependencies.sh  run_cmake_precommit.py
src/: DefaultComponents.cpp  analyzer_pipeline_builder.cpp  ast_cache.cpp  caching_ast_indexer.cpp  cli_exit_codes.cpp  cmake_source_acquirer.cpp  compile_commands_ast_indexer.cpp  component_registry.cpp  default_analyzer_pipeline.cpp  default_components.cpp  dsl_analyzer.cpp  dsl_main.cpp  escaping.cpp  heuristic_dsl_extractor.cpp  logging.cpp  markdown_reporter.cpp  rule_based_coherence_analyzer.cpp
tests/: cli_integration_test.cpp  cmake_source_acquirer_test.cpp  compile_commands_ast_indexer_test.cpp  component_registry_test.cpp  components_test.cpp  dsl_analyzer_test.cpp  end_to_end_dsl_extraction_test.cpp  escaping_test.cpp  exit_code_test.cpp  heuristic_dsl_extractor_test.cpp  logging_test.cpp  markdown_reporter_test.cpp
tests/test_support/: temporary_project.h
tests/test_support/fixtures/: compile_commands.json  end_to_end_expected_dsl.md
